--- a/addresses/index.html
+++ b/addresses/index.html
@@ -94,19 +94,23 @@
             </div>
         </div>
       </div>
-        <!--
+
         <div class="container">
             <div class="card card-body mb-5">
-                <h1 class="text-center">Closing Address: Needles in a Russian Haystack </h1>
+                <h1 class="text-center">Closing Address: </h1>
                 <p class = "text-center">
-                     The 2020 Tokyo Summer Olympic Games will be heavily scrutinised with regards to its doping control measures following the Russian doping scandals at the 2016 Rio Olympic Games. Many now wonder about the legitimacy of WADA and federal doping agencies around the world. Full of fascinating intricacies, dive into the world of doping control and fair play, as well as the McLaren Report, with Diana Tesic.
-
+                     
                 </p>
                 <hr>
-                <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/dtesic.jpg" alt="Diana Tesic"/>
-                <h2 class="text-center">Diana Tesic</h2>
+                <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/mromanow.png" alt="Diana Tesic"/>
+                <h2 class="text-center">Michele Romanow</h2>
+                <h4 class="text-center">Tech Titan | Serial Entrepreneur | Venture Capitalist | Dragon </h4>
                 <p>
-                Diana Tesic is a well-practiced Sports Lawyer with experience working in sports arbitration, commercial law within the sports industry and sports investigations. Ms. Tesic received her Law degree from the University of Western Ontario in 2011, specializing in sports law. Ms. Tesic worked alongside Richard McLaren to investigate allegations of doping at the Sochi 2014 Winter Olympics for the World Anti-Doping Association and was an integral part of the publication of the McLaren Report—an investigation into the allegations of state-sponsored doping in Russia.
+                Tech titan Michele Romanow is an engineer and a serial entrepreneur who started five companies before her 33rd birthday. A “Dragon” on CBC’s hit show Dragons’ Den, Michele is the co-founder of Buytopia.ca, Snap By Groupon, and — most recently — Clearbanc, an online financial service. 
+
+                Michele has driven new digital solutions to many of the world’s leading brands, including Netflix and Starbucks, and has earned substantial recognition as a finalist for the EY Entrepreneur of the Year Award; the RBC Canadian Women Entrepreneur Awards; and was a Cartier Women’s Initiative Award global finalist, among many other nominations.
+                </p>
+                <p>Michele is currently a director for Vail Resorts, Freshii, League of Innovators, Queen’s Business School, and Shad Valley, a transformational program that develops the entrepreneurial potential of exceptional Canadian youth.
                 </p>
             </div>
         </div>
