--- a/wacathon/index.html
+++ b/wacathon/index.html
@@ -200,6 +200,53 @@
             </div>
         </div>
     </div>
+    <div class="card text-center w-50 mx-auto " style="margin-top: 4vh" >
+            <div class="card-body">
+                    <h1 class> Sprint Schedule</h1>
+            </div>
+    </div>
+    <div class = "card my-4">
+        <div class="table-responsive">
+          <table class="table table-hover">
+              <thead class="thead-dark">
+                <tr>
+                  <th>Event</th>
+                  <th>Time</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Registration</td>
+                  <td>9:00 to 9:30</td>
+                </tr>
+                <tr>
+                  <td>Challenge Kick-off</td>
+                  <td>9:30 to 10:30</td>
+                </tr>
+                <tr>
+                  <td>Solution Work (Food and Drinks throughout)</td>
+                  <td>10:30 to 1:00</td>
+                </tr>
+                <tr>
+                  <td>Preliminary Judging </td>
+                  <td>1:00 to 2:15</td>
+                </tr>
+                <tr>
+                  <td>General Feedback From Judges</td>
+                  <td>2:15 to 2:30</td>
+                </tr>
+                <tr>
+                  <td>Well Deserved Break</td>
+                  <td>2:30 to 3:00</td>
+                </tr>
+                <tr>
+                  <td>Final Pitch/Awards</td>
+                  <td>3:00 to 3:300</td>
+                </tr>
+              </tbody>
+            </table>
+        </div>
+    </div>
 
 
     
