--- a/faq/index.html
+++ b/faq/index.html
@@ -261,7 +261,7 @@
           </a>
           <div id="collapse-howmuchdoesregcost" class="collapse" role="tabpanel" aria-labelledby="heading-howmuchdoesregcost">
             <div class="card-body">
-              <p>Registration costs $50 per student, but there is an early-bird price of $45 per student if registration is completed before January 18th, 2018. If price is an issue, please let us know: we can arrange special accomodations.</p>
+              <p>Registration costs $55 per student. If price is an issue, please let us know: we can arrange special accomodations.</p>
 
             </div>
           </div>
