--- a/index.html
+++ b/index.html
@@ -134,10 +134,9 @@
 </div>-->
     <div class="container mt-3">
       <div class="card card-body">
-        <!--<h2 class="text-center">WAC Promotional Video</h2>
-        <div class="embed-container">
-          <iframe src="https://www.youtube.com/embed/GUycwPz_Kds" frameborder="0" allowfullscreen></iframe>
-        </div>-->
+        <h2 class="text-center">WAC Promotional Video</h2>
+        <iframe width="840" height="465" style= "border: 1px solid black; margin: auto" src="https://www.youtube.com/embed/9e_q9QhDoIU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <hr>
         <div class="row pt-5">
           <div class="col-sm-3">
             <img class="img-fluid" src="img/snowden.png" alt="Edward Snowden"/>
