update start of page

--- a/index.html
+++ b/index.html
@@ -164,14 +164,10 @@
             </button>
           </div>
           <div class="modal-body">
-              Thanks for looking at the WAC website, be sure to also check out <font color="red">SPRINT</font>: an all new ideathon with tons of prizes, amazing speakers and more!
-          </div>
-          <div class="modal-body">
-              Click the <font color="red">SPRINT</font> button to learn more!
+              Thanks for looking at the WAC website, please note that the <font color="red">Keynote</font> (that will be happening on Febuary 3rd) will be open to the public and is free! However, the main event on Febuary 4th is only open to highschool students
           </div>
           <div class="modal-footer">
             <button type="button" data-dismiss="modal" class="btn btn-primary">Close</button>
-            <a href="wacathon/index.html"><button type ="button" class="btn btn-danger">Sprint</button></a>
           </div>
         </div>
     </div>
