--- a/wacathon/index.html
+++ b/wacathon/index.html
@@ -134,7 +134,7 @@
             </div>
         </div>
             
-        <div class="col-xl-6">
+        <div class="col-ml-6">
             <div class="card text-center w-50 mx-auto " style="margin-top: 4vh" >
                 <div class="card-body">
                     <h1 class>Judges</h1>
@@ -237,7 +237,7 @@
                 </tr>
                 <tr>
                   <td>Final Pitch/Awards</td>
-                  <td>3:00 to 3:300</td>
+                  <td>3:00 to 3:30</td>
                 </tr>
               </tbody>
             </table>
