closing up shop

--- a/index.html
+++ b/index.html
@@ -80,7 +80,11 @@
 
 
 
-
+<div class="container">
+      <div class="alert alert-info" role="alert">
+        Thanks for coming to WAC 2020! Watch VODs of our programs <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">on our Facebook Page</a>!
+      </div>
+</div>
       
 
  <div class="index-welcome">
