updated schedule to 2021

--- a/index.html
+++ b/index.html
@@ -7,27 +7,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="The World Affairs Conference">
 
-  <title>World Affairs Conference</title>
+  <title>WAC Schedule | The World Affairs Conference</title>
   <meta name="description" content="The website for the World Affairs Conference, Canada's oldest student-led current affairs conference that explores world issues relevant to youth.">
 
-  <link rel="icon" type="image/png" sizes="192x192"  href="img/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-  <link rel="stylesheet" href= "css/bootstrap.min.css">
-  <link rel="stylesheet" href= "css/style.css">
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-132383226-1"></script>
-  <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-132383226-1');
-  </script>
-  <script defer src="js/fontawesome-all.min.js"></script>
+  <link rel="icon" type="image/png" sizes="192x192"  href="/img/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="../img/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
+  <link rel="stylesheet" href= "../css/bootstrap.min.css">
+  <link rel="stylesheet" href= "../css/style.css">
+  <script src="../js/google_analytics.js"></script>
+  <script defer src="../js/fontawesome-all.min.js"></script>
   <style>
 		body{
-			background-image:url("img/earth.png"),url("img/stars.png");
+			background-image:url("../img/earth.png"),url("../img/stars.png");
 			background-repeat:no-repeat;
 		}
 	</style>
@@ -36,7 +29,7 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-  <a class="navbar-brand" href="index.html"><img class="nav-image" src="img/wac_logo_full.png" alt="WAC Logo"/></a>
+  <a class="navbar-brand" href="../index.html"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -44,32 +37,32 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="nav navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="keynote/index.html">Keynote</a>
+        <a class="nav-link" href="../keynote/index.html">Keynote</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="addresses/index.html">Addresses</a>
+        <a class="nav-link" href="../addresses/index.html">Addresses</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="plenaries/index.html">Plenaries</a>
+        <a class="nav-link" href="../plenaries/index.html">Plenaries</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="faq/index.html">FAQ</a>
+        <a class="nav-link" href="../faq/index.html">FAQ</a>
       </li>
       <!--
       <li class="nav-item">
-        <a class="nav-link" href="staff/index.html">Staff</a>
+        <a class="nav-link" href="../staff/index.html">Staff</a>
       </li>
       -->
-      <li class="nav-item">
-        <a class="nav-link" href="schedule/index.html">Schedule</a>
+      <li class="nav-item active">
+        <a class="nav-link" href="../schedule/index.html">Schedule</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="contact/index.html">Contact</a>
+        <a class="nav-link" href="../contact/index.html">Contact</a>
       </li>
     </ul>
     <ul class="navbar-nav float-lg-right">
       <li class="nav-item mr-2">
-        <a class="btn btn-outline-danger" href="wacathon/index.html" data-proofer-ignore>SPRINT</a>
+        <a class="btn btn-outline-danger" href="../wacathon/index.html" data-proofer-ignore>SPRINT</a>
       </li>
       <li class="nav-item">
         <a class="btn btn-outline-primary" href="https://worldaffarisregistration.github.io/#/" data-proofer-ignore>Register</a>
@@ -79,118 +72,81 @@
 </nav>
 
 
-
-<div class="container">
+    <!--<div class="container">
       <div class="alert alert-info" role="alert">
-        Thanks for coming to WAC 2020! Watch VODs of our programs <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">on our Facebook Page</a>!
+        Thanks for coming to WAC 2019! Watch VODs of our programs <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">on our Facebook Page</a>!
       </div>
-</div>
+    </div>-->
 
-
- <div class="index-welcome">
-  <div class="container">
-    <div class="text-center text-md-left">
-      <h2>Welcome to the 2020</h2>
-      <h1>World Affairs Conference</h1>
-      <h3 class="display-5">February 3rd-4th</h3>
-    </div>
-    <div class="text-center">
-      This Year's Theme:
-      <h1 class="display-4">World Gone WAC</h1>
-    </div>
-    <div class="text-center text-md-right">
-      <h4>The Conference is</h4>
-      <h3><span id="countdown"></span></h3>
+      <div class="container">
+  <div class="card card-body">
+    <h1 class="text-center">WAC Regular Stream</h1>
+    <h2 class="text-center">Febuary 6th, Conference Day</h2>
+    <div class="table-responsive">
+      <table class="table table-hover my-4">
+    	  <thead class="thead-dark">
+    	    <tr>
+    	      <th>Event</th>
+    	      <th>Time</th>
+    	      <th>Location</th>
+    	    </tr>
+    	  </thead>
+    	  <tbody>
+    	    <tr>
+    	      <td>Registration/Networking (Optional)</td>
+    	      <td>8:30 to 9:00</td>
+    	      <td>Zoom</td>
+    	    </tr>
+    	    <tr>
+              <td><a href="../addresses/index.html">Opening Address</a></td>
+    	      <td>9:00 to 9:45</td>
+    	      <td>GoToWebinar</td>
+    	    </tr>
+    	    <tr>
+    	      <td><a href="../plenaries/index.html">Plenary #1</a></td>
+    	      <td>10:00 to 10:35</td>
+    	      <td>GoToWebinar</td>
+    	    </tr>
+    	    <tr>
+    	      <td>Networking (Optional)</td>
+    	      <td>10:40 to 10:55</td>
+    	      <td>Zoom</td>
+    	    </tr>
+    	    <tr>
+    	      <td>Startup Exhibition & Lunch</td>
+    	      <td>11:00 to 12:00</td>
+    	      <td>Zoom</td>
+    	    </tr>
+    	    <tr>
+    	      <td><a href="../keynote/index.html">Keynote Speaker</a></td>
+    	      <td>12:00 to 1:00</td>
+    	      <td>GoToWebinar</td>
+    	    </tr>
+    	    <tr>
+    	      <td><a href="../plenaries/index.html">Plenary #2</a></td>
+    	      <td>1:15 to 1:50</td>
+    	      <td>GoToWebinar</td>
+    	    </tr>
+    	    <tr>
+            <td>Networking (Optional)</td>
+    	      <td>1:50 to 2:05</td>
+    	      <td>Zoom</td>
+    	    </tr>
+            <tr>
+    	      <td><a href="../addresses/index.html">Closing Address</a></td>
+    	      <td>2:10 to 2:55</td>
+    	      <td>GoToWebinar</td>
+    	    </tr>
+            <tr>
+    	      <td>Dismissal</td>
+    	      <td>3:00</td>
+    	      <td></td>
+    	    </tr>
+    	  </tbody>
+    	</table>
     </div>
   </div>
 </div>
-
-<div class="container">
-  <div class="card card-body mt-3 mx-3">
-    <div class="row">
-      <div class="col-sm-3">
-        <img class="img-fluid" src="img/wac_logo.svg" alt="WAC Logo"/>
-      </div>
-      <div class="col-sm-9">
-        <h4>What's WAC?</h4>
-        <p>
-          The World Affairs Conference (WAC) is North America's largest annual student-run current affairs conference. Annually held at Upper Canada College in Toronto, Canada, the World Affairs Conference connects over 1000 students, with a common interest in current affairs, from across North America.
-        </p>
-      </div>
-    </div>
-  </div>
-
-  <!--<div class="card card-body mt-3">
-      <div class="row">
-        <div class="col-sm-6">
-          <img class="img-fluid rounded" src="img/speakers/jhansen.jpg" alt="James Hansen"/>
-        </div>
-        <div class="col-sm-6">
-          <h3>Featured Speaker</h3>
-          <h4>James Hansen, Keynote Address</h4>
-          <p>
-            Dr. James Hansen, formerly Director of the NASA Goddard Institute for Space Studies, is Adjunct Professor at Columbia University’s Earth Institute, where he directs a program in Climate Science, Awareness and Solutions. Dr. Hansen is best known for his testimony on climate change in the 1980s that helped raise awareness of global warming. He is a member of the U.S. National Academy of Sciences and has received numerous awards including the Sophie and Blue Planet Prizes.
-
-          </p>
-        </div>
-      </div>
-  </div>
-</div>-->
-    <div class="container mt-3">
-      <div class="card card-body">
-        <h2 class="text-center">WAC Promotional Video</h2>
-        <iframe width="840" height="465" style= "border: 1px solid black; margin: auto" src="https://www.youtube.com/embed/9e_q9QhDoIU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <hr>
-        <div class="row pt-5">
-          <div class="col-sm-3">
-            <img class="img-fluid" src="img/snowden.png" alt="Edward Snowden"/>
-          </div>
-          <div class="col-sm-9">
-            <h3>Edward Snowden</h3>
-            <p>
-              Five years ago, Edward Snowden gave the WAC 2015 Lionel Gelber Keynote Address. In June 2013, Snowden leaked highly classified information about the scale and scope of NSA and CIA counter-terrorism and counter-intelligence operations around the globe. Since then, he has become a household name and is among the most influential privacy activists in the world. At the Keynote Address, Snowden explained his views on global privacy issues, government involvement in citizens' lives, and the dangers of the digital age.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-</div>
-
-<!-- Pop Up -->
-
-
-
-
-<script type="text/javascript">
-
-  var wacdate = "2/3/2020"; //Countdown date in MM/DD/YYYY format (no 0's required)
-  function getTimeRemaining(endtime){
-
-
-  	var t = Date.parse(endtime) - Date.parse(new Date());
-  	var seconds = Math.floor( (t/1000) % 60 );
-  	var minutes = Math.floor( (t/1000/60) % 60 );
-  	var hours = Math.floor( (t/(1000*60*60)) % 24 );
-  	var days = Math.floor( t/(1000*60*60*24) );
-
-  	if (t > 0){
-  		return "in " + days + " Days, " + hours + " Hours, " + minutes + " Minutes, and " + seconds + " Seconds";
-  	}
-    else if (t < 0) {
-      return "Over!";
-      // return "in progress!"
-    }
-  	else {
-  		return "Oops!";
-  	}
-  }
-  window.setInterval(function(){
-    $("#countdown").html(getTimeRemaining(wacdate));
-  }, 1000);
-
-
-
-</script>
 
 
 
@@ -200,7 +156,7 @@
       The World Affairs Conference website, made by the <a class="white-icon" style="text-decoration:underline;" href="https://github.com/worldaffairsconference" target="_blank">WAC team</a> with <span class="fa fa-heart" style="color:red;"></span> and <a href="https://github.com/worldaffairsconference/world.ac" style="color:inherit;"><span class="fab fa-github"></span></a>
     </p>
     <p>
-      Have any questions or concerns? Check out <a class="white-icon" href="faq/index.html" style="text-decoration:underline;">our FAQ</a> or <a class="white-icon" href="contact/index.html" style="text-decoration:underline;">get in touch with us!</a>
+      Have any questions or concerns? Check out <a class="white-icon" href="../faq/index.html" style="text-decoration:underline;">our FAQ</a> or <a class="white-icon" href="../contact/index.html" style="text-decoration:underline;">get in touch with us!</a>
     </p>
     <a href="mailto:wac@ucc.on.ca"><span class="fa fa-fw fa-2x fa-envelope white-icon"></span></a>
     <a href="https://www.facebook.com/worldaffairsconference/"><span class="fab fa-fw fa-2x fa-facebook white-icon"></span></a>
@@ -209,19 +165,10 @@
     <a href="https://github.com/worldaffairsconference/world.ac"><span class="fab fa-fw fa-2x fa-github white-icon"></span></a>
   </div>
 </footer>
-<script src="js/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/tether.min.js"></script>
+<script src="../js/jquery.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
+<script src="../js/tether.min.js></script>
 
-<!-- Pop Up! -->
-<script type="text/javascript">
-  if (document.cookie.indexOf("popup") == -1){
-      $(document).ready(function($) {
-        $('#myModal').modal('show');
-      });
-      document.cookie = "cookiename=popup; expires= Fri, 31 Jan 2020 20:00:00 UTC";
-  }
-</script>
 
   </body>
 
