--- a/schedule/index.html
+++ b/schedule/index.html
@@ -81,8 +81,7 @@
       <div class="container">
   <div class="card card-body">
     <h1 class="text-center">WAC Regular Stream</h1>
-    <!--<p class="text-center">(<a href="../files/schedule_2018.pdf">PDF copy</a>)</p>-->
-    <h2 class="text-center mt-2">Febuary 3rd, Keynote Address</h2>
+    <h2 class="text-center">Febuary 6th, Conference Day</h2>
     <div class="table-responsive">
       <table class="table table-hover my-4">
     	  <thead class="thead-dark">
@@ -94,83 +93,54 @@
     	  </thead>
     	  <tbody>
     	    <tr>
-    	      <td>Doors Open</td>
-    	      <td>6:00 to 7:00</td>
-    	      <td>Main Foyer</td>
-    	    </tr>
-    	    <tr>
-    	      <td><a href="../keynote/index.html">Keynote</a></td>
-    	      <td>7:00 to 8:00</td>
-    	      <td>Laidlaw Hall</td>
-    	    </tr>
-    	    <tr>
-    	      <td>Q&A Period</td>
-    	      <td>8:00 to 9:00</td>
-    	      <td>Laidlaw Hall</td>
-    	    </tr>
-    	  </tbody>
-    	</table>
-    </div>
-    <h2 class="text-center">Febuary 4th, Conference Day</h2>
-    <div class="table-responsive">
-      <table class="table table-hover my-4">
-    	  <thead class="thead-dark">
-    	    <tr>
-    	      <th>Event</th>
-    	      <th>Time</th>
-    	      <th>Location</th>
-    	    </tr>
-    	  </thead>
-    	  <tbody>
-    	    <tr>
-    	      <td>Registration</td>
-    	      <td>9:00 to 9:30</td>
-    	      <td>Main Foyer</td>
+    	      <td>Registration/Networking (Optional)</td>
+    	      <td>8:30 to 9:00</td>
+    	      <td>Zoom</td>
     	    </tr>
     	    <tr>
               <td><a href="../addresses/index.html">Opening Address</a></td>
-    	      <td>9:30 to 10:00</td>
-    	      <td>Laidlaw Hall</td>
+    	      <td>9:00 to 9:45</td>
+    	      <td>GoToWebinar</td>
     	    </tr>
     	    <tr>
-    	      <td>Panel Q&A</td>
-    	      <td>10:00 to 10:20</td>
-    	      <td>Laidlaw Hall</td>
+    	      <td><a href="../plenaries/index.html">Plenary #1</a></td>
+    	      <td>10:00 to 10:35</td>
+    	      <td>GoToWebinar</td>
     	    </tr>
     	    <tr>
-    	      <td>Break</td>
-    	      <td>10:20 to 10:25</td>
+    	      <td>Networking (Optional)</td>
+    	      <td>10:40 to 10:55</td>
+    	      <td>Zoom</td>
+    	    </tr>
+    	    <tr>
+    	      <td>Startup Exhibition & Lunch</td>
+    	      <td>11:00 to 12:00</td>
+    	      <td>Zoom</td>
+    	    </tr>
+    	    <tr>
+    	      <td><a href="../keynote/index.html">Keynote Speaker</a></td>
+    	      <td>12:00 to 1:00</td>
+    	      <td>GoToWebinar</td>
+    	    </tr>
+    	    <tr>
+    	      <td><a href="../plenaries/index.html">Plenary #2</a></td>
+    	      <td>1:15 to 1:50</td>
+    	      <td>GoToWebinar</td>
+    	    </tr>
+    	    <tr>
+            <td>Networking (Optional)</td>
+    	      <td>1:50 to 2:05</td>
+    	      <td>Zoom</td>
+    	    </tr>
+            <tr>
+    	      <td><a href="../addresses/index.html">Closing Address</a></td>
+    	      <td>2:10 to 2:55</td>
+    	      <td>GoToWebinar</td>
+    	    </tr>
+            <tr>
+    	      <td>Dismissal</td>
+    	      <td>3:00</td>
     	      <td></td>
-    	    </tr>
-    	    <tr>
-    	      <td>Plenary Session #1</td>
-    	      <td>10:25 to 11:25</td>
-    	      <td>Check your nametag for <a href="../plenaries/index.html">plenary</a> details</td>
-    	    </tr>
-    	    <tr>
-    	      <td>Plenary Session #2</td>
-    	      <td>11:25 to 12:15</td>
-    	      <td>Check your nametag for <a href="../plenaries/index.html">plenary</a> details</td>
-    	    </tr>
-    	    <tr>
-    	      <td>Lunch & Start Up Exhibition</td>
-    	      <td>12:15 to 1:15</td>
-    	      <td>Old Gym</td>
-    	    </tr>
-    	    <tr>
-              <td><a href="../addresses/index.html">Michele Romanow Address</a></td>
-    	      <td>1:15 to 2:45</td>
-    	      <td>Laidlaw Hall</td>
-    	    </tr>
-            <tr>
-    	      <td>Michele Romanow Q&A</td>
-    	      <td>2:15 to 2:45</td>
-    	      <td>Laidlaw Hall</td>
-    	    </tr>
-            <tr>
-    	      <td>Awards and Presentation</td>
-    	      <td>3:00 to 3:30</td>
-    	      <td>Laidlaw Hall</td>
     	    </tr>
     	  </tbody>
     	</table>
