updated to 2021 minus trailer

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </div>
     <div class="text-center">
       This Year's Theme:
-      <h1 class="display-4">World Gone WAC</h1>
+      <h1 class="display-4">Together Towards Tomorrow</h1>
     </div>
     <div class="text-center text-md-right">
       <h4>The Conference is</h4>
@@ -163,7 +163,7 @@
 
 <script type="text/javascript">
 
-  var wacdate = "2/3/2020"; //Countdown date in MM/DD/YYYY format (no 0's required)
+  var wacdate = "2/6/2021"; //Countdown date in MM/DD/YYYY format (no 0's required)
   function getTimeRemaining(endtime){
 
 
