--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
         <a class="btn btn-outline-danger" href="wacathon/index.html" data-proofer-ignore>SPRINT</a>
       </li>
       <li class="nav-item">
-        <a class="btn btn-outline-primary" href="https://worldaffarisregistration.github.io/#/" data-proofer-ignore>Register</a>
+        <!-- <a class="btn btn-outline-primary" href="https://worldaffarisregistration.github.io/#/" data-proofer-ignore>Register</a> -->
+        <a class="btn btn-outline-primary" href="https://register.gotowebinar.com/register/6122619915197970701?source=Internal+Sign-up+Link" data-proofer-ignore>Register</a>
       </li>
     </ul>
   </div>
