--- a/wacathon/index.html
+++ b/wacathon/index.html
@@ -65,7 +65,7 @@
         <a class="btn btn-outline-danger active" href="index.html" data-proofer-ignore>SPRINT</a>
       </li>
       <li class="nav-item">
-        <a class="btn btn-outline-primary" href="https://worldaffarisregistration.github.io/#/" data-proofer-ignore>Register</a>
+        <a class="btn btn-outline-primary" href="https://register.gotowebinar.com/register/6122619915197970701?source=Internal+Sign-up+Link" data-proofer-ignore>Register</a>
       </li>
     </ul>
   </div>
